--- a/Python.ipynb
+++ b/Python.ipynb
@@ -1245,7 +1245,7 @@
     "\n",
     "#### **3. Set Types**\n",
     "\n",
-    "1. **`set`**: Represents an unordered collection of unique elements.\n",
+    "1. **`set`**: Represents an unordered collection of unique elements. Sets are Mutable also.\n",
     "    ```python\n",
     "    unique_numbers = {1, 2, 3, 4, 5}\n",
     "    print(type(unique_numbers))  # Output: <class 'set'>\n",
@@ -2792,6 +2792,358 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b614e73-35d4-40f5-af5b-6fe3642e376c",
+   "metadata": {},
+   "source": [
+    "## **Practice Question for if- else**\n",
+    "### **Basic Questions**\n",
+    "1. Write a program that takes an integer input from the user and prints whether it is **positive**, **negative**, or **zero**.\n",
+    "2. Write a program that asks for a number and prints whether it is **even** or **odd**.\n",
+    "3. Ask the user to enter their age and determine if they are **a child (0-12 years)**, **a teenager (13-19 years)**, **an adult (20-59 years)**, or **a senior citizen (60+ years)**.\n",
+    "\n",
+    "### **Intermediate Questions**\n",
+    "4. Write a program that asks for a score (0-100) and prints the corresponding **grade**:\n",
+    "   - 90-100: A\n",
+    "   - 80-89: B\n",
+    "   - 70-79: C\n",
+    "   - 60-69: D\n",
+    "   - Below 60: F\n",
+    "5. Ask the user for a year and determine whether it is a **leap year** or not.\n",
+    "6. Write a program that asks for the temperature and prints whether it is **Cold (<15°C), Warm (15-25°C), or Hot (>25°C)**.\n",
+    "7. Ask the user to input a character and check if it is a **vowel (a, e, i, o, u)** or a **consonant**.\n",
+    "\n",
+    "### **Advanced Questions**\n",
+    "8. Write a program that takes three numbers as input and prints the **largest** among them.\n",
+    "9. Write a program that checks if a triangle is **equilateral (all sides equal)**, **isosceles (two sides equal)**, or **scalene (no sides equal)**.\n",
+    "10. Create a program that asks for a username and password. If the username is `\"admin\"` and the password is `\"password123\"`, print `\"Login successful\"`; otherwise, print `\"Invalid credentials\"`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7c1b67f-0088-4632-b79b-247193aba151",
+   "metadata": {},
+   "source": [
+    "### 1. Write a program that takes an integer input from the user and prints whether it is **positive**, **negative**, or **zero**.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2c5f016a-9d4c-4fb7-900c-26958365e19d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the number:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is Positive\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter the number: \"))\n",
+    "\n",
+    "if num > 0:\n",
+    "    print( \"The number is Positive\")\n",
+    "elif num < 0:\n",
+    "    print( \"The number is negetive\")\n",
+    "else:\n",
+    "    print( \"The number is 0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bfc98a5-2140-41f2-9d58-a87a02781a58",
+   "metadata": {},
+   "source": [
+    "### 2. Write a program that asks for a number and prints whether it is **even** or **odd**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2cfcea59-14ff-4164-8890-b49c618d89b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the number:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter the number: \"))\n",
+    "\n",
+    "if num % 2 == 0:\n",
+    "    print(\"The number is even\")\n",
+    "else:\n",
+    "    print(\"The number is odd\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "076fce0f-a344-42d7-b2eb-be58e070fee9",
+   "metadata": {},
+   "source": [
+    "### 3. Ask the user to enter their age and determine if they are **a child (0-12 years)**, **a teenager (13-19 years)**, **an adult (20-59 years)**, or **a senior citizen (60+ years)**.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "df0d43ba-b10f-44c4-ac3a-5836bc5a16a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your age:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Child\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"Enter your age: \"))\n",
+    "if age > 0:\n",
+    "    if 0 <= age <= 12:\n",
+    "        print(\"Child\")\n",
+    "    elif 13 <= age <=19:\n",
+    "        print(\"Teenager\")\n",
+    "    elif 20<= age <=59:\n",
+    "        print(\"Adult\")\n",
+    "    else:\n",
+    "        print(\"Senior Citizen\")\n",
+    "else:\n",
+    "    print(\"Age cannot be negetive \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f3ab925-54a0-47b3-970c-d39208fe0869",
+   "metadata": {},
+   "source": [
+    "### 5. Ask the user for a year and determine whether it is a **leap year** or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ac1271ec-d80e-4511-8145-cb300457008d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the year:  2016\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 2016 is a Leap year\n"
+     ]
+    }
+   ],
+   "source": [
+    "#leap year\n",
+    "year = int(input(\"Enter the year: \"))\n",
+    "\n",
+    "if (year % 4 == 0 and year % 100 != 0):\n",
+    "    print(\"The\", year, \"is a Leap year\")\n",
+    "else:\n",
+    "    print(year, \"is not a leap year\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06cdf3cb-0155-4c71-bcd1-e9d842b114a0",
+   "metadata": {},
+   "source": [
+    "### 7. Ask the user to input a character and check if it is a **vowel (a, e, i, o, u)** or a **consonant**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4d8f435b-9c2b-4902-b9f9-32812b626c68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the character:  f\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The character is consonent\n"
+     ]
+    }
+   ],
+   "source": [
+    "char = input(\"Enter the character: \")\n",
+    "\n",
+    "if char in \"aeiou\":\n",
+    "    print(\"the char is vowel\")\n",
+    "else: \n",
+    "    print(\"The character is consonent\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e78f81a7-65d7-440a-b81c-45e648bfa82e",
+   "metadata": {},
+   "source": [
+    "### 8. Write a program that takes three numbers as input and prints the **largest** among them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cae44fe-15de-4127-92dd-9de42fc69c85",
+   "metadata": {},
+   "source": [
+    "a = int(input(\"Enter the first number: \"))\n",
+    "b = int(input(\"Enter the second number: \"))\n",
+    "c = int(input(\"Enter the third number: \"))\n",
+    "\n",
+    "if a > b and a > c:\n",
+    "    print(a, \"is the greatest\")\n",
+    "elif b > a and b > c:\n",
+    "    print(b, \"is the greatest\")\n",
+    "elif a == b == c:\n",
+    "    print(\"All are equal\")\n",
+    "else:\n",
+    "    print(c, \"is the greatest\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cbb5e40-1dc3-4acf-bbdf-85ed68f6a9a7",
+   "metadata": {},
+   "source": [
+    "### 10. Create a program that asks for a username and password. If the username is `\"admin\"` and the password is `\"password123\"`, print `\"Login successful\"`; otherwise, print `\"Invalid credentials\"`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6bd7974d-8bce-4fb9-b22f-9dac5f0acf5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the UserID:  admin\n",
+      "Enter the password:  password123\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Login Successfull\n"
+     ]
+    }
+   ],
+   "source": [
+    "userid = input(\"Enter the UserID: \")\n",
+    "password = input(\"Enter the password: \")\n",
+    "\n",
+    "if userid == \"admin\" and password == \"password123\":\n",
+    "    print(\"Login Successfull\")\n",
+    "else: \n",
+    "    print(\"Invalid Credential\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faf6b058-1e8f-4db9-b1a7-f21aab65eeb1",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25f2c0e4-309b-4091-a1f0-2ae3c20f4781",
+   "metadata": {},
+   "source": [
+    "### 9. Write a program that checks if a triangle is **equilateral (all sides equal)**, **isosceles (two sides equal)**, or **scalene (no sides equal)**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "583dc820-756d-40f9-bb05-bcdcff901909",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the first side:  5\n",
+      "Enter the second side:  6\n",
+      "Enter the third side:  7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The triangle exists\n",
+      "Scalen triangle\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Enter the first side: \"))\n",
+    "b = int(input(\"Enter the second side: \"))\n",
+    "c = int(input(\"Enter the third side: \"))\n",
+    "\n",
+    "if a + b > c and b + c > a and a + c > b:\n",
+    "    print(\"\\nThe triangle exists\")\n",
+    "    if a == b == c:\n",
+    "        print(\"Equilateral Triangle\")\n",
+    "    elif a == b or b == c or a == c:\n",
+    "        print(\"Isoscles triangle\")\n",
+    "    else: \n",
+    "        print(\"Scalen triangle\")\n",
+    "else:\n",
+    "    print(\"The triangle doesnot exists\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "19a13915-c603-431e-807f-737ad7a888fd",
    "metadata": {},
    "source": [
@@ -3171,6 +3523,364 @@
     "list2 = [2,3,4,5,6,7]\n",
     "for i in list2:\n",
     "    print(\"Square of\", i, \"is: \", i**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a44c713c-9a7b-4f93-a6ee-d9e9604e3d24",
+   "metadata": {},
+   "source": [
+    "## Practice question for `for` loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c59b208-0ba5-4e42-9f68-64b3ae6bb9b5",
+   "metadata": {},
+   "source": [
+    "### 1. Write a program to print numbers from 1 to 10 using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3fcd092f-cac4-4d1c-8f30-8e4f0f0b3a05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,11):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a864360-05a7-4c5e-9c17-323591394e48",
+   "metadata": {},
+   "source": [
+    "### 2. Write a program to find the sum of the first 10 natural numbers using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ac5b9728-88a7-42c5-8d84-e167870c1014",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of first 10 natural numbers is: 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "for i in range(1,11):\n",
+    "    sum = sum + i\n",
+    "print(\"The sum of first 10 natural numbers is:\", sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0117858b-b182-40bf-a5db-95c5a5044913",
+   "metadata": {},
+   "source": [
+    "### 3. Write a program to print all even numbers between 1 and 20 using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "820d4e15-56b0-4f36-9dd4-a4540506403f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,21):\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "74d3242c-f6aa-4f4c-99f9-1fb9e9b8dfe1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2,21,2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c9f7385-2844-42fd-9d74-14d146d0a21b",
+   "metadata": {},
+   "source": [
+    "### 4. Write a program to print the multiplication table of a given number (e.g., 5)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "87f38919-b276-4895-961c-629a73b2349e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 *  1  =  5\n",
+      "5 *  2  =  10\n",
+      "5 *  3  =  15\n",
+      "5 *  4  =  20\n",
+      "5 *  5  =  25\n",
+      "5 *  6  =  30\n",
+      "5 *  7  =  35\n",
+      "5 *  8  =  40\n",
+      "5 *  9  =  45\n",
+      "5 *  10  =  50\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,11):\n",
+    "    print(\"5 * \",i, \" = \", i*5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2456326b-0236-41ff-8c15-15fb67557a8e",
+   "metadata": {},
+   "source": [
+    "### 5. Write a program to print all elements of a list using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a56d798a-f581-4747-bdd5-cb62447ea4c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1,2,3,4,5,6,7]\n",
+    "for i in list1:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a318b7ca-fd67-4f5c-9b76-dd5dd13cac8e",
+   "metadata": {},
+   "source": [
+    "## Reversing a string\n",
+    "### 6. Write a program to print a string in reverse order using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "74796f54-4829-4714-a659-bb7c8fb1918d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l\n",
+      "u\n",
+      "h\n",
+      "a\n",
+      "r\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = \"rahul\"\n",
+    "for i in str[::-1]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f3696b41-ecbe-4ec8-90e1-b666b80b42b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'luhar'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str[::-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3311fc59-5a39-4d2f-932b-0c167156e9b0",
+   "metadata": {},
+   "source": [
+    "## Checking for it to be prime number or not\n",
+    "### 7. Write a program to check if a number is prime using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "37e7ed8d-08dc-4f5d-af5d-7b086759e5cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is not a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 14\n",
+    "for i in range(2, num):\n",
+    "    if num % i == 0:\n",
+    "        print(\"The number is not a prime number\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"the number is prime number\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14a739b1-0338-414a-864d-9fd86e26e973",
+   "metadata": {},
+   "source": [
+    "## Factorial of a number\n",
+    "### 8. Write a program to find the factorial of a given number using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "dbacf539-9cff-4abe-976c-f91fdfe62e90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 5\n",
+    "prod = 1\n",
+    "for i in range(1,6):\n",
+    "    prod = prod * i\n",
+    "print(prod)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5f105a3-42be-4023-b991-7b9f54f57977",
+   "metadata": {},
+   "source": [
+    "## Right angled triangle\n",
+    "### 9. Write a program to print a right-angled triangle pattern using for loops."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "1847dc0e-5aa6-48ef-907b-9710e7152271",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (1,6):\n",
+    "    print(\"*\"*i)"
    ]
   },
   {
@@ -3931,7 +4641,9 @@
   {
    "cell_type": "markdown",
    "id": "d5757240-7159-4ffb-9a87-f083654e1405",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# **8.1. String Slicing**"
    ]
@@ -4169,14 +4881,6 @@
     "- **Default behavior**: Omitting `start`, `end`, or `step` uses default values (whole string, full range, and step of `1`).\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "030e6412-41c3-4f86-b9d1-a82a36e3c160",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -6760,7 +7464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
